# onshape_robot_tools

./: CMakeLists.txt  README.md  package.xml  robot_from_assembly  setup.py
launch/: create_and_view_robot.launch
scripts/: robot_from_assembly
src/onshape_robot_tools/: onshape_client.py
